force-app/main/default/objects/ORTLAction__c.object
<CustomObject>
    <fields>
        <fullName>APU__c</fullName>
        <description>APU of selected Tag no.</description>
        <inlineHelpText>Default from Risk record</inlineHelpText>
        <label>APU</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActionBy__c</fullName>
        <formula>Owner:User.FirstName+&quot; &quot;+Owner:User.LastName</formula>
        <label>Action By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CancelReason__c</fullName>
        <description>Reason of cancel action</description>
        <label>Cancel Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CloseDate__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DueDate__c</fullName>
        <defaultValue>Today()+30</defaultValue>
        <description>Date to finish task</description>
        <inlineHelpText>Default 30 days after create action record and editable</inlineHelpText>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>InitialDate__c</fullName>
        <description>Create Date</description>
        <inlineHelpText>Format: DD/MM/YYYY</inlineHelpText>
        <label>Initial Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicate Record Status Active/Inactive</description>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsOwner__c</fullName>
        <formula>$User.Id = Owner:User.Id</formula>
        <label>IsOwner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MitigateCons__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To check if an action was created to mitigate consequence</description>
        <inlineHelpText>To check if an action was created to mitigate consequence</inlineHelpText>
        <label>Mitigate Consequence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notification__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SAP Notification Number</description>
        <label>Notification</label>
        <referenceTo>Notification__c</referenceTo>
        <relationshipLabel>Action</relationshipLabel>
        <relationshipName>Action1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Objective__c</fullName>
        <formula>IF(AND(ReduceLLH__c = true, MitigateCons__c  = false),&quot;Reduce Likelihood&quot;, 
 IF(AND(ReduceLLH__c = false, MitigateCons__c  = true), &quot;Mitigate Consequence&quot;, 
 IF(AND(ReduceLLH__c = true, MitigateCons__c  = true), &quot;Reduce Likelihood, Mitigate Consequence&quot;, null) ) )</formula>
        <label>Objective</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlantCode__c</fullName>
        <formula>TagNo__r.Company_Code__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plant Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlantSection__c</fullName>
        <label>Plant Section</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plant__c</fullName>
        <description>Display Plant Section of selected Tag no.</description>
        <inlineHelpText>Default from Risk record</inlineHelpText>
        <label>Plant</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReduceLLH__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To check if an action was created to reduce likelihood</description>
        <inlineHelpText>To check if an action was created to reduce likelihood</inlineHelpText>
        <label>Reduce Likelihood</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RiskScenario__c</fullName>
        <description>Default from Risk record</description>
        <label>Threat Scenario</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Risk__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Threat</label>
        <referenceTo>ORTLRisk__c</referenceTo>
        <relationshipLabel>Action</relationshipLabel>
        <relationshipName>Action</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <description>Task owner section detail</description>
        <label>Section</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ORTLSectionValue</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>TagNo__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Functional Location</description>
        <inlineHelpText>Default from Risk record</inlineHelpText>
        <label>Tag No.</label>
        <referenceTo>Functional_Location__c</referenceTo>
        <relationshipLabel>Action</relationshipLabel>
        <relationshipName>Action</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TaskCopyOwner__c</fullName>
        <formula>Owner:User.FirstName &amp;&quot; &quot;&amp; Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Task Copy Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaskDescription__c</fullName>
        <description>Task Description detail</description>
        <label>Task Description</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TaskInitiator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name Risk owner</description>
        <inlineHelpText>Default name as created user</inlineHelpText>
        <label>Task Initiator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Action1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TaskOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of assigned action owner</description>
        <label>Task Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Action</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TaskStatus__c</fullName>
        <description>Display the current status</description>
        <label>Task Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ORTLTaskStatus</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>TaskTitle__c</fullName>
        <description>Task title detail</description>
        <label>Task Title</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TaskType__c</fullName>
        <description>Display task type</description>
        <label>Task Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Assessment</fullName>
                </value>
                <value>
                    <fullName>Awaiting Opportunity</fullName>
                </value>
                <value>
                    <fullName>Implementation</fullName>
                </value>
                <value>
                    <fullName>Moc</fullName>
                </value>
                <value>
                    <fullName>Planning</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>txtPlanningPlant__c</fullName>
        <label>Planning Plant</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>txtTagNo__c</fullName>
        <description>To search in list view</description>
        <label>Tag No.</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Action</label>
    <listViews>
        <fullName>APUA</fullName>
        <columns>NAME</columns>
        <columns>txtTagNo__c</columns>
        <columns>APU__c</columns>
        <columns>PlantSection__c</columns>
        <columns>txtPlanningPlant__c</columns>
        <columns>RiskScenario__c</columns>
        <columns>TaskTitle__c</columns>
        <columns>TaskType__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>TaskStatus__c</columns>
        <columns>DueDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>APU__c</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>APU A</label>
    </listViews>
    <listViews>
        <fullName>APUB</fullName>
        <columns>NAME</columns>
        <columns>txtTagNo__c</columns>
        <columns>APU__c</columns>
        <columns>PlantSection__c</columns>
        <columns>txtPlanningPlant__c</columns>
        <columns>RiskScenario__c</columns>
        <columns>TaskTitle__c</columns>
        <columns>TaskType__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>TaskStatus__c</columns>
        <columns>DueDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>APU__c</field>
            <operation>equals</operation>
            <value>B</value>
        </filters>
        <filters>
            <field>TaskStatus__c</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </filters>
        <filters>
            <field>PlantSection__c</field>
            <operation>equals</operation>
            <value>UTILITY</value>
        </filters>
        <filters>
            <field>txtPlanningPlant__c</field>
            <operation>equals</operation>
            <value>1200</value>
        </filters>
        <label>APU B</label>
    </listViews>
    <listViews>
        <fullName>APUC</fullName>
        <columns>NAME</columns>
        <columns>txtTagNo__c</columns>
        <columns>APU__c</columns>
        <columns>PlantSection__c</columns>
        <columns>txtPlanningPlant__c</columns>
        <columns>RiskScenario__c</columns>
        <columns>TaskTitle__c</columns>
        <columns>TaskType__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>TaskStatus__c</columns>
        <columns>DueDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>APU__c</field>
            <operation>equals</operation>
            <value>C</value>
        </filters>
        <label>APU C</label>
    </listViews>
    <listViews>
        <fullName>APUD</fullName>
        <columns>NAME</columns>
        <columns>txtTagNo__c</columns>
        <columns>APU__c</columns>
        <columns>PlantSection__c</columns>
        <columns>txtPlanningPlant__c</columns>
        <columns>RiskScenario__c</columns>
        <columns>TaskTitle__c</columns>
        <columns>TaskType__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>TaskStatus__c</columns>
        <columns>DueDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>APU__c</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>APU D</label>
    </listViews>
    <listViews>
        <fullName>APUE</fullName>
        <columns>NAME</columns>
        <columns>txtTagNo__c</columns>
        <columns>APU__c</columns>
        <columns>PlantSection__c</columns>
        <columns>txtPlanningPlant__c</columns>
        <columns>RiskScenario__c</columns>
        <columns>TaskTitle__c</columns>
        <columns>TaskType__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>TaskStatus__c</columns>
        <columns>DueDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>APU__c</field>
            <operation>equals</operation>
            <value>E</value>
        </filters>
        <label>APU E</label>
    </listViews>
    <listViews>
        <fullName>APUF</fullName>
        <columns>NAME</columns>
        <columns>txtTagNo__c</columns>
        <columns>APU__c</columns>
        <columns>PlantSection__c</columns>
        <columns>txtPlanningPlant__c</columns>
        <columns>RiskScenario__c</columns>
        <columns>TaskTitle__c</columns>
        <columns>TaskType__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>TaskStatus__c</columns>
        <columns>DueDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>APU__c</field>
            <operation>equals</operation>
            <value>F</value>
        </filters>
        <label>APU F</label>
    </listViews>
    <listViews>
        <fullName>ActionInProgress</fullName>
        <columns>NAME</columns>
        <columns>txtTagNo__c</columns>
        <columns>APU__c</columns>
        <columns>PlantSection__c</columns>
        <columns>txtPlanningPlant__c</columns>
        <columns>RiskScenario__c</columns>
        <columns>TaskTitle__c</columns>
        <columns>TaskType__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>TaskStatus__c</columns>
        <columns>DueDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TaskStatus__c</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </filters>
        <label>Action in progress</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>txtTagNo__c</columns>
        <columns>APU__c</columns>
        <columns>PlantSection__c</columns>
        <columns>txtPlanningPlant__c</columns>
        <columns>RiskScenario__c</columns>
        <columns>TaskTitle__c</columns>
        <columns>TaskType__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>TaskStatus__c</columns>
        <columns>InitialDate__c</columns>
        <columns>DueDate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Chayut_list</fullName>
        <booleanFilter>1 AND (2 OR 3) AND 4 AND 5</booleanFilter>
        <columns>NAME</columns>
        <columns>txtTagNo__c</columns>
        <columns>APU__c</columns>
        <columns>PlantSection__c</columns>
        <columns>RiskScenario__c</columns>
        <columns>TaskTitle__c</columns>
        <columns>TaskType__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>TaskStatus__c</columns>
        <columns>DueDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>APU__c</field>
            <operation>equals</operation>
            <value>C</value>
        </filters>
        <filters>
            <field>PlantSection__c</field>
            <operation>equals</operation>
            <value>TOC3</value>
        </filters>
        <filters>
            <field>PlantSection__c</field>
            <operation>equals</operation>
            <value>TOC3</value>
        </filters>
        <filters>
            <field>TaskStatus__c</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </filters>
        <filters>
            <field>IsActive__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Chayut list</label>
        <sharedTo>
            <group>ENMC</group>
            <group>MFOP</group>
            <group>MROC</group>
            <group>TNPC</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CompletedAction</fullName>
        <columns>NAME</columns>
        <columns>txtTagNo__c</columns>
        <columns>APU__c</columns>
        <columns>PlantSection__c</columns>
        <columns>txtPlanningPlant__c</columns>
        <columns>RiskScenario__c</columns>
        <columns>TaskTitle__c</columns>
        <columns>TaskType__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>TaskOwner__c</columns>
        <columns>TaskStatus__c</columns>
        <columns>DueDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TaskStatus__c</field>
            <operation>equals</operation>
            <value>Done</value>
        </filters>
        <label>Completed Action</label>
    </listViews>
    <listViews>
        <fullName>My_Action_List</fullName>
        <columns>NAME</columns>
        <columns>txtTagNo__c</columns>
        <columns>APU__c</columns>
        <columns>PlantSection__c</columns>
        <columns>txtPlanningPlant__c</columns>
        <columns>RiskScenario__c</columns>
        <columns>TaskTitle__c</columns>
        <columns>TaskType__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>TaskStatus__c</columns>
        <columns>DueDate__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Action List</label>
    </listViews>
    <nameField>
        <label>Action No.</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>ORTLActionCheckCancelReason</fullName>
        <active>true</active>
        <errorConditionFormula>text(TaskStatus__c) = &apos;Canceled&apos; &amp;&amp; (CancelReason__c)=&apos;&apos;</errorConditionFormula>
        <errorMessage>Please enter Cancel reason</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ORTLActionCheckIsChangeActionNo</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
NOT(ISNEW()),
ISCHANGED( Name ),
NOT($Profile.Name = &quot;ผู้ดูแลระบบ&quot;)
)</errorConditionFormula>
        <errorMessage>Cannot change value of ActionNo.</errorMessage>
    </validationRules>
</CustomObject>